# rhine-chat

./: .gitignore  dendrite_key.pem  flake.nix
rhine-discord/: CHANGELOG.md  rhine-discord.cabal
rhine-discord/example/: Main.hs  config.dhall
rhine-matrix/: rhine-matrix.cabal
rhine-matrix/example/: Decrypt.hs  Main.hs  Redact.hs  RequestRoomKeys.hs  SendReaction.hs  UploadKeys.hs  config.dhall
rhine-matrix/src/FRP/Rhine/: Matrix.hs
rhine-telegram/: CHANGELOG.md  rhine-telegram.cabal
rhine-telegram/src/FRP/Rhine/: Telegram.hs
vodozemac/: CHANGELOG.md  README.md  vodozemac.cabal
vodozemac/src/: Vodozemac.hs
vodozemac/src/Vodozemac/: Raw.hsc
