cabal-version:       3.0
name:                rhine-matrix
version:             0.1.0
synopsis:            Matrix frontend for Rhine
homepage:            https://github.com/ners/rhine-chat/blob/master/rhine-matrix
license:             Apache-2.0
license-file:        LICENCE.md
author:              ners
maintainer:          ners@gmx.ch
bug-reports:         https://github.com/ners/rhine-chat/issues
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/ners/rhine-chat

common common
    default-language: GHC2021
    ghc-options:
        -Weverything
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-all-missed-specialisations
    default-extensions:
        Arrows
        ApplicativeDo
        BlockArguments
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        ExplicitNamespaces
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        RecursiveDo
        TypeFamilies
        ViewPatterns
    build-depends:
        base >= 4 && < 5,
        matrix-client,
        rhine,
        vodozemac,

library
    import:           common
    hs-source-dirs:   src
    build-depends:
        time,
    other-modules:
    exposed-modules:
        FRP.Rhine.Matrix

executable example
    import:           common
    hs-source-dirs:   example
    main-is:          Main.hs
    other-modules:
        Decrypt
        Redact
        RequestRoomKeys
        SendReaction
        UploadKeys
    ghc-options:      -O2 -threaded
    build-depends:
        aeson >= 2.2,
        aeson-casing,
        aeson-pretty,
        bytestring,
        containers,
        dhall,
        extra,
        http-client,
        rhine-matrix,
        text,
        time,
