cabal-version:       3.0
name:                vodozemac
version:             0.1.0
synopsis:            Haskell bindings for vodozemac
homepage:            https://github.com/ners/rhine-chat/blob/master/vodozemac
license:             Apache-2.0
license-file:        LICENCE.md
author:              ners
maintainer:          ners@gmx.ch
bug-reports:         https://github.com/ners/rhine-chat/issues
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md, Cargo.toml, src/lib.rs

source-repository head
  type:     git
  location: https://github.com/ners/rhine-chat

common common
    default-language: GHC2021
    ghc-options:
        -Weverything
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-all-missed-specialisations
    default-extensions:
        ForeignFunctionInterface
    build-depends:
        base >= 4 && < 5,

library
    import:           common
    hs-source-dirs:   src
    exposed-modules:
        Vodozemac
        Vodozemac.Raw
    extra-libraries:  vodozemac_hs
